# gtest_sample_project

./: CMakeLists.txt
cmake/Hunter/: config.cmake
src/: dumb_array.cpp  dumb_array.h  soundex.h
tests/: soundex_test.cpp
